# fizzbuzz-in-c-Ibellastar

./: .gitignore  README.md  makefile
.devcontainer/: devcontainer.json
.github/checker/: makefile  meson.build
.github/checker/subprojects/: unity.wrap
.github/checker/tests/test_1/: main_1.c  test_1.c
.github/checker/tests/test_2/: main_2.c  test_2.c
.github/checker/tests/test_3/: main_3.c  test_3.c
.github/checker/tests/test_4/: expected_output_4.txt  main_4.c  test_4.c
.github/workflows/: classroom.yml
src/: fizz_buzz.c  fizz_buzz.h
